--- a/services/Cargo.toml
+++ b/services/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 actix-web = "3.3"
 adapters = { path = "../adapters" }
+anyhow = "1.0"
+common = { path = "../common" }
+log = "0.4"
+log4rs = "1.0"
