--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,2 @@
 [workspace]
-members = [
-    "common",
-    "domains",
-    "infra",
-    "adapters",
-    "services",
-]
+members = ["common", "domains", "usecases", "infra", "adapters", "services"]
