--- a/usecases/Cargo.toml
+++ b/usecases/Cargo.toml
@@ -11,6 +11,7 @@ common = { path = "../common" }
 derive-new = "0.5"
 domains = { path = "../domains" }
 hmac = { version = "0.12", features = ["reset"] }
+jwt = "0.16"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
