--- a/adapters/Cargo.toml
+++ b/adapters/Cargo.toml
@@ -11,10 +11,13 @@ chrono = "0.4"
 common = { path = "../common" }
 derive-new = "0.5"
 domains = { path = "../domains" }
+hmac = { version = "0.12", features = ["reset"] }
 infra = { path = "../infra" }
+jwt = "0.16"
 log = "0.4"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sha2 = "0.10"
 usecases = { path = "../usecases" }
 
 [dependencies.sea-orm]
