--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -13,3 +13,6 @@ once_cell = "1.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10"
+
+[dev-dependencies]
+ulid = "0.5"
