--- a/adapters/Cargo.toml
+++ b/adapters/Cargo.toml
@@ -4,20 +4,19 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-http = "3.0.0-rc.2"
 actix-web = "4.0.0-rc.3"
 anyhow = "1.0"
 chrono = "0.4"
 common = { path = "../common" }
 derive-new = "0.5"
 domains = { path = "../domains" }
-hmac = { version = "0.12", features = ["reset"] }
 infra = { path = "../infra" }
 jwt = "0.16"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10"
+ulid = "0.5"
 usecases = { path = "../usecases" }
 
 [dependencies.sea-orm]
@@ -29,3 +28,6 @@ features = [
     "debug-print"
 ]
 default-features = false
+
+[dev-dependencies]
+dotenv = "0.15"
