--- a/adapters/Cargo.toml
+++ b/adapters/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-web = "4.0.0-rc.3"
+actix-web = "4.0.1"
 anyhow = "1.0"
 chrono = "0.4"
 common = { path = "../common" }
