--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-http = "3.0.0-rc.2"
-actix-web = "4.0.0-rc.3"
+actix-http = "3.0.0"
+actix-web = "4.0.1"
 anyhow = "1.0"
 chrono = "0.4"
 dotenv = "0.15"
